syntax = "proto3";
package onedb;

option java_package = "com.hufudb.onedb.rpc";
option java_outer_classname = "OneDBCommon";

message Point {
  double lon = 1;
  double lat = 2;
}

message FieldProto {
  string name = 1;
  int32 type = 2;
}

message HeaderProto {
  repeated FieldProto field = 1;
}

message LocalTableInfoProto {
  string name = 1;
  HeaderProto header = 2;
}

message LocalTableListProto {
  repeated LocalTableInfoProto table = 1;
}

message RowsProto {
  repeated bytes row = 1;
}

message DataSetProto {
  HeaderProto header = 1;
  RowsProto rows = 2;
}

message ExpressionProto {
  int32 opType = 1;
  int32 outType = 2;
  repeated ExpressionProto in = 3;
  int32 func = 4;
  oneof value {
    string str = 5;
    bool b = 6;
    int32 i32 = 7;
    int64 i64 = 8;
    float f32 = 9;
    double f64 = 10;
    Point p = 11;
    int32 ref = 12;
  }
}

message OneDBQueryProto {
  string tableName = 1;
  repeated string columnNames = 2;
  repeated ExpressionProto selectExp = 3;
  repeated ExpressionProto whereExp = 4;
  repeated ExpressionProto aggExp = 5;
  repeated string order = 6;
  int32 fetch = 7;
  int32 offset = 8;
}